Fixed scrollbar and item grid

--- a/darkstyle.css
+++ b/darkstyle.css
@@ -2,6 +2,8 @@
 
 body {
     background-color: #24252A;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 
@@ -56,11 +58,11 @@ body {
 	cursor: pointer;
 	margin-right: 10px;
   	display: inline-block;
-	transition: all .2s ease-in-out;
+	transition: all .05s ease-in-out;
 }
 
 .scalableContactInfo:hover {
-	transform: scale(1.2);
+	transform: scale(1.1);
 }
 
 
@@ -86,7 +88,6 @@ body {
 .content {
 	margin-top: 10px;
 	margin-left: 290px;
-	position: fixed;
 	width: 100%;
 	height: 100%;
 	font-family: 'Muli', sans-serif;
@@ -94,9 +95,8 @@ body {
 
 .contentGrid {
 	position: relative;
-	border: thin ridge;
-	width: 1000px;
-	height: 735px;
+	width: 1100px;
+	height: 100%;
 }
 
 .contentGridItem {
@@ -106,11 +106,23 @@ body {
 	border-color: #606060;
 	float: left;
 	margin-right: 30px;
+	margin-left: 30px;
 	margin-bottom: 30px;
 }
 
-.footer {
+.contentGridItemTitle {
+	text-align: center;
+	font-size: 20px;
+}
+
+.archives {
 	clear: both;
+}
+
+.headerDesc {
+	text-align: center;
+	margin-top: -20px;
+	font-size: 12px;
 }
 
 hr { 
